--- a/turbo/generators/templates/package.json.hbs
+++ b/turbo/generators/templates/package.json.hbs
@@ -1,21 +1,19 @@
 {
-  "name": "@yuki/tailwind-config",
-  "version": "0.1.0",
+  "name": "@yuki/{{ name }}",
   "private": true,
+  "version": "0.1.0",
+  "license": "MIT",
   "type": "module",
   "exports": {
-    ".": "./index.ts"
+    ".": "./src/index.ts"
   },
   "scripts": {
-    "clean": "git clean -xdf .cache .turbo node_modules",
+    "dev": "tsc",
+    "build": "tsc",
+    "clean": "git clean -xdf .cache .turbo dist node_modules",
     "format": "prettier --check . --ignore-path ../../.gitignore",
     "lint": "eslint",
-    "typecheck": "tsc --noEmit"
-  },
-  "dependencies": {
-    "postcss": "latest",
-    "tailwindcss": "latest",
-    "tailwindcss-animate": "latest"
+    "typecheck": "tsc --noEmit --emitDeclarationOnly false"
   },
   "devDependencies": {
     "@yuki/prettier-config": "workspace:*",
