--- a/turbo/generators/templates/eslint.config.js.hbs
+++ b/turbo/generators/templates/eslint.config.js.hbs
@@ -1,4 +1,4 @@
-import baseConfig from "@acme/eslint-config/base";
+import baseConfig from '@yuki/eslint-config/base'
 
 /** @type {import('typescript-eslint').Config} */
 export default [
@@ -6,4 +6,4 @@ export default [
     ignores: [],
   },
   ...baseConfig,
-];
+]
