--- a/turbo/generators/templates/tsconfig.json.hbs
+++ b/turbo/generators/templates/tsconfig.json.hbs
@@ -1,6 +1,6 @@
 {
   "extends": "@yuki/tsconfig/internal-package.json",
   "compilerOptions": {},
-  "include": ["*.ts", "src"],
+  "include": ["src"],
   "exclude": ["node_modules"]
 }
