feat: change validator to arktype
- add validators packages
- use arktype instead of zod to validate data
- add form components
- update shadcn components

--- a/apps/web/app/globals.css
+++ b/apps/web/app/globals.css
@@ -1,6 +1,7 @@
+@import 'tailwindcss';
 @import '@yuki/ui/tailwind.css';
 @source '../../../packages/ui/src/components/*.tsx';
 
-@theme {
-  --font-sans: var(--font-geist-sans);
+@theme inline {
+  --font-sans: var(--font-geist-sans), sans-serif;
 }
