feat: add react router app

--- a/apps/react-router/app/app.css
+++ b/apps/react-router/app/app.css
@@ -1,6 +1,6 @@
 @import '@yuki/ui/tailwind.css';
 @source '../../../packages/ui/src/components/*.tsx';
 
-@theme inline {
-  --font-sans: var(--font-geist-sans), sans-serif;
+@theme {
+  --font-sans: 'Inter', sans-serif;
 }
