chore: minor changes

--- a/apps/react-router/app/app.css
+++ b/apps/react-router/app/app.css
@@ -2,5 +2,5 @@
 @source '../../../packages/ui/src/components/*.tsx';
 
 @theme {
-  --font-sans: 'Inter', sans-serif;
+  --font-sans: 'Geist', sans-serif;
 }
