--- a/apps/react-router/app/app.css
+++ b/apps/react-router/app/app.css
@@ -1,6 +1,6 @@
 @import '@yuki/ui/tailwind.css';
 @source '../../../packages/ui/src/components/*.tsx';
 
-@theme {
+@theme inline {
   --font-sans: 'Geist', sans-serif;
 }
