--- a/turbo/generators/templates/eslint.config.js.hbs
+++ b/turbo/generators/templates/eslint.config.js.hbs
@@ -1,9 +1,9 @@
-import baseConfig from "@yuki/eslint-config/base";
+import baseConfig from '@yuki/eslint-config/base'
 
 /** @type {import('typescript-eslint').Config} */
 export default [
   {
-    ignores: [],
+    ignores: ['dist/**'],
   },
   ...baseConfig,
-];
+]
